--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Test</title>
+  <title>Pinterest/title>
 </head>
 <body>
-  <button type="button" class="btn btn-success">PINTEREST</button>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Pinterest</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <button class="nav-link btn btn-success hide" id="navbar-button-logout">Logout</button>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <div id="auth"></div>
+  <div id="pin" class="hide">PIN TO THE BOARD</div>
+  <div id="board">THE BOARD</div>
 </body>
 </html>
