--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   </nav>
 
   <div id="auth"></div>
-  <div id="pin" class="hide">PIN TO THE BOARD</div>
-  <div id="board">THE BOARD</div>
+  <div id="home"></div>
+  <div id="boards" class="hide"></div>
 </body>
 </html>
