singleBoard printing and event listeners are working, just need to figure out how to get the pins to print right

--- a/src/index.html
+++ b/src/index.html
@@ -25,5 +25,6 @@
   <div id="auth"></div>
   <div id="home"></div>
   <div id="boards" class="hide"></div>
+  <div id="big-board-view"></div>
 </body>
 </html>
