--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>Pinterest</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <a class="navbar-brand" href="#">Pinterest</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -16,7 +16,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <button class="nav-link btn btn-success hide" id="navbar-button-logout">Logout</button>
+          <button class="nav-link btn btn-danger hide" id="navbar-button-logout">Logout</button>
         </li>
       </ul>
     </div>
