--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Pinterest</title>
+  <title>Pickterest</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="#">Pinterest</a>
+    <a class="navbar-brand" href="#">Pickterest</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -17,13 +17,13 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
           <button class="nav-link btn btn-danger hide" id="navbar-button-logout">Logout</button>
+          <button type="button" class="btn btn-default" id="auth"></button>
         </li>
       </ul>
     </div>
   </nav>
-
-  <div id="auth"></div>
-  <div id="home"></div>
+  
+  <div class ="text-center" id="home"></div>
   
   <div id="boards" class="hide"></div>
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
